did all the recipe pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "cSpell.words": ["chadon", "Culantro"]
+  "cSpell.words": [
+    "basmati",
+    "calalloo",
+    "calaloo",
+    "Carriacou",
+    "chadon",
+    "Culantro",
+    "Garam",
+    "Masala",
+    "Oketo",
+    "Rhum",
+    "Trini"
+  ]
 }
