--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "cSpell.words": [
     "basmati",
+    "Beausejour",
     "calalloo",
     "calaloo",
+    "Caprese",
     "Carriacou",
     "chadon",
     "Culantro",
